[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/key.png" type="Texture" id=1]
[ext_resource path="res://debug/Collectible.gd" type="Script" id=2]
[ext_resource path="res://SFX/Keys2.wav" type="AudioStream" id=3]
[ext_resource path="res://VFX/vfx_Sparkles.tscn" type="PackedScene" id=4]
[ext_resource path="res://VFX/vfx_KeyCollect.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/VFX/vfx_collect.png" type="Texture" id=6]

[sub_resource type="Curve" id=7]
min_value = -5.0
max_value = 5.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.266667, -5 ), 0.0, 0.0, 0, 0, Vector2( 0.728571, 5 ), 0.0, 0.0, 0, 0, Vector2( 0.994978, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 27.4591

[node name="Collectible" type="Area2D"]
scale = Vector2( 1.1, 1.1 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
hover_curve = SubResource( 7 )
enable_hover = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -1.5, 0.0846559 )
scale = Vector2( 0.680556, 0.592135 )
texture = ExtResource( 1 )

[node name="GhostSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1.5, 1.5, 1.5, 1 )
self_modulate = Color( 0.301961, 0.423529, 0.00392157, 1 )
position = Vector2( -1.5, 0.0846559 )
scale = Vector2( 0.680556, 0.592135 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 1.01378 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 4.6
pitch_scale = 1.5
bus = "SFX"

[node name="Sparkles" parent="." instance=ExtResource( 4 )]

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="KeyCollect" parent="." instance=ExtResource( 5 )]
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
texture = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Collectible_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
